--- a/GE.WebAdmin/ReleaseNotes.txt
+++ b/GE.WebAdmin/ReleaseNotes.txt
@@ -1,3 +1,6 @@
-﻿SX Admin v 1.0.0.1
+﻿SX Admin v. 1.0.0.2
+1. Для материалов сайта реализовано динамическре формирование древовидных категорий
+
+SX Admin v 1.0.0.1
 1. На главной странице панели управления отображаются пользователи, находящиеся на данный момент в панеле управления;
 2. Добавлен функционал динамического формирования групп справочной системы. Группы формируются в виде дерева с бесконечным уровнем вложенности
