--- a/SX.WebCore/Resources/ReleaseNotes.txt
+++ b/SX.WebCore/Resources/ReleaseNotes.txt
@@ -1,3 +1,7 @@
+SX Admin v. 1.0.0.4
+1. ƒобавлен функционал составлени€ списка "черных" адресов. «апросы, поступающие на сайты с таких url автоматически отвергаютс€ сервером.
+2. ƒобавлена возможность предварительного просмотра редактируемого материала.
+
 SX Admin v. 1.0.0.3
 1. ƒл€ выпадающих списков модернизированы и унифицированы гриды. √риды поддерживают поиск и пагинацию.
 
