--- a/SX.WebCore/Resources/ReleaseNotes.txt
+++ b/SX.WebCore/Resources/ReleaseNotes.txt
@@ -1,3 +1,8 @@
+SX Admin v. 1.0.0.6
+[17.05.2016]
+1. Добавлен механизм логирования ошибок
+2. Введено ограничение на тег Title для материалов (от 2 до 8 слов)
+
 SX Admin v. 1.0.0.5
 1. Добавлена статистика входов пользователей в админ-панель 
 
