words count attributes

--- a/SX.WebCore/Resources/ReleaseNotes.txt
+++ b/SX.WebCore/Resources/ReleaseNotes.txt
@@ -1,3 +1,8 @@
+SX Admin v. 1.0.0.7
+[18.05.2016]
+1. Добавлены аттрибуты проверки вводимых значений на количество слов
+2. Введено ограничение на количество слов для элемента облака тегов (не более 4-х)
+
 SX Admin v. 1.0.0.6
 [17.05.2016]
 1. Добавлен механизм логирования ошибок
