--- a/SX.WebCore/Resources/ReleaseNotes.txt
+++ b/SX.WebCore/Resources/ReleaseNotes.txt
@@ -1,3 +1,7 @@
+SX Admin v. 1.0.0.8
+[02.06.2016]
+1. Добавлены тесты, которые пользователи могут проходить на сайте
+
 SX Admin v. 1.0.0.7
 [18.05.2016]
 1. Добавлены аттрибуты проверки вводимых значений на количество слов
